# beacon

./: .env.example  .gitignore  CLI_PLAYBOOK.md  DESIGN_LOG.md  POC_PLAN.md  README.md  pyproject.toml  requirements.txt
samples/emails/: 001_linkedin_dayforce.txt  002_linkedin_shopify.txt  003_greenhouse_clutch.txt  004_lever_wealthsimple.txt  005_recruiter_dayforce.txt  006_recruiter_cohere.txt  007_poor_match_retailco.txt  008_poor_match_marketing.txt  009_excellent_cohere.txt  010_company_mongodb.txt
src/beacon/: __init__.py  canonical_job_resolver.py  compensation.py  config.py  dedupe.py  digest.py  email_filter.py  email_loader.py  email_sources.py  employment.py  env_loader.py  job_description_fetcher.py  main.py  models.py  normalization.py  parser.py  scorer.py  storage.py  telegram_notifier.py
tests/: __init__.py  test_canonical_job_resolver.py  test_compensation.py  test_dedupe.py  test_digest.py  test_email_filter.py  test_email_loader.py  test_email_sources.py  test_employment.py  test_env_loader.py  test_job_description_fetcher.py  test_main_cli.py  test_parser.py  test_scorer.py  test_storage.py  test_telegram_notifier.py
