[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-ai"
version = "0.1.0"
description = "Local POC for Beacon, an AI career copilot that ranks job-alert emails."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
beacon = "beacon.main:main"

[tool.setuptools.packages.find]
where = ["src"]
